manifests/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${APP_MICROSERVICE_NAME}
spec:
  selector:
    matchLabels:
      app: ${APP_MICROSERVICE_NAME}
  replicas: 2
  template:
    metadata:
      labels:
        app: ${APP_MICROSERVICE_NAME}
    spec:
      containers:
      - name: ${APP_MICROSERVICE_NAME}
        image: ${OCIR_REGION}/${OCIR_STORAGE_NAMESPACE}/${APP_MICROSERVICE_REPO}:${BUILDRUN_VERSION}
        imagePullPolicy: Always
        ports:
#        - name: hello-py-app
        - containerPort: 5000
          protocol: TCP
        resources:
          limits:
            memory: 500Mi
            cpu: 900m
          requests:
            memory: 200Mi
            cpu: 500m
      imagePullSecrets:
        - name: my-ocirsecret
