manifests/svc-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-py-app-svc-lb
  namespace: test
  labels:
    app: hello-py-app
  annotations:
    oci.oraclecloud.com/load-balancer-type: "lb"
    service.beta.kubernetes.io/oci-load-balancer-shape: "flexible"
    service.beta.kubernetes.io/oci-load-balancer-shape-flex-min: "10"
    service.beta.kubernetes.io/oci-load-balancer-shape-flex-max: "10"
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      name: http
  selector:
    app: hello-py-app
