manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: nginx
  rules:
  - host: "hello-py.demo-oci.tk"
    http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: hello-py-app-svc-ing
            port:
              number: 80
      - path: /testpath
        pathType: Prefix
        backend:
          service:
            name: hello-py-app-svc-ing
            port:
              number: 80
